sfdx-source/force-app/main/default/objects/Opportunity_Account_Relationship__c/Opportunity_Account_Relationship__c.object-meta.xml
<CustomObject>
    <label>Opportunity Account Relationship</label>
    <nameField>
        <displayFormat>OPR-{0000}</displayFormat>
        <label>Opportunity Account Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Account Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>