sfdx-source/force-app/main/default/objects/Opportunity_Account_Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-341: This field will contains the Account from which the Account relationship is originating.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Account Relationships</relationshipLabel>
    <relationshipName>Opportunity_Account_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>