sfdx-source/force-app/main/default/objects/Opportunity_Account_Relationship__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>LEM-3449: Records the close date of the related Opportunity.</description>
    <formula>Opportunity__r.CloseDate</formula>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>