sfdx-source/force-app/main/default/objects/Opportunity_Account_Relationship__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>LEM-341: This field is used to track that the Product Insights are related to the Opportunity through Account relationship record.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Account Relationships</relationshipLabel>
    <relationshipName>Opportunity_Account_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>