sfdx-source/force-app/main/default/objects/Opportunity_Account_Relationship__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-341: This field is used to track the Account with which the user is originating the relationship with.</description>
    <label>Related Account</label>
    <referenceTo>Account_Relationship__c</referenceTo>
    <relationshipLabel>Opportunity Account Relationships</relationshipLabel>
    <relationshipName>Opportunity_Account_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>