sfdx-source/force-app/main/default/objects/Opportunity_Account_Relationship__c/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <description>LEM-341: This field show the Account Relationship record.</description>
    <formula>Related_Account__r.Related_Account__r.Name</formula>
    <label>Relationship Name</label>
    <type>Text</type>
</CustomField>