sfdx-source/force-app/main/default/objects/Opportunity_Account_Relationship__c/fields/Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status__c</fullName>
    <description>LEM-341: This field is used to store the status of the Account relationship record.</description>
    <formula>TEXT(Related_Account__r.Relationship_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Status</label>
    <type>Text</type>
</CustomField>