sfdx-source/force-app/main/default/objects/Opportunity_Account_Relationship__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <description>LEM-341: This field depicts the type of account with which the user is creating a relationship to.</description>
    <formula>TEXT(Related_Account__r.Relationship_Type__c)</formula>
    <label>Relationship Type</label>
    <type>Text</type>
</CustomField>