sfdx-source/force-app/main/default/objects/Opportunity_Account_Relationship__c/fields/Secondary_Account__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-2386: Lookup to Secondary Account of the Account Relationship</description>
    <label>Secondary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Opportunities</relationshipLabel>
    <relationshipName>Opportunity_Account_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>