sfdx-source/force-app/main/default/objects/Opportunity_Account_Relationship__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>LEM-3449: Captures the current stage of the related Opportunity.</description>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <label>Stage</label>
    <type>Text</type>
</CustomField>